# Neural_Network

./: CMakeLists.txt  Main.cpp  Network.cpp  Neural_Network.sln  Neural_Network.vcxproj  Neural_Network.vcxproj.filters  Neuron.h  ReadMe.md
.github/workflows/: clang-tidy-review.yml
src/: Main.cpp  Network.cpp  Network.h  Network.hpp  Neuron.cpp  Neuron.h  Utils.cpp  Utils.hpp
